fixed logic for profile card not showing pic when view profile, adding profile pic upload modal, progress bar

--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -14,9 +14,11 @@
         .profile-picture {
             width: 200px;
             height: 200px;
+            object-fit: contain;
             border-radius: 50%;
             padding: 5px;
             border: 2px solid #cacaca;
+            cursor: pointer;
         }
 
         .right-info{
